@@ -1,0 +1,3 @@
+prog: pth_self_kill
+args: 15 killotherthread
+vgopts: -q
